--- a/gb/23/8/29/n14063473.md
+++ b/gb/23/8/29/n14063473.md
@@ -25,52 +25,39 @@
 <figure id="attachment_14063465" aria-describedby="caption-attachment-14063465" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14063465-DSC00492.jpg"><img class="size-large wp-image-14063465" src="https://i.epochtimes.com/assets/uploads/2023/08/id14063465-DSC00492-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14063465" class="wp-caption-text">中华专业人员协会的会长林致中介绍这个成立40多年的团体。（刘景烨/大纪元）</figcaption></figure>
 <p>在现场热情迎新的社团还有哈佛排球社、篮球团、羽球社、剑桥合唱团、台大校友会、波士顿台湾人生物科技协会、台湾人医师协会、波士顿台湾影展、波音旺来音乐祭，以及台湾人公共事务协会麻州分会。</p>
 <figure id="attachment_14063463" aria-describedby="caption-attachment-14063463" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14063463-DSC00481.jpg"><img class="size-large wp-image-14063463" src="https://i.epochtimes.com/assets/uploads/2023/08/id14063463-DSC00481-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14063463" class="wp-caption-text">新英格兰地区台湾同学会联合会的会长蔡朗安欢迎大家参与9月9日的迎新派对。（刘景烨/大纪元）</figcaption></figure>
-<p>新英格兰地区台湾同学会联合会的会长蔡朗安说，学联将于9月16日下午在牛顿市（Newton）的侨教中心举办迎新派对，欢迎大家前去参加。另外，波士顿台湾人生物科技协会的迎新活动也将在10月21日举办。◇</p>
+<p>新英格兰地区台湾同学会联合会的会长蔡朗安说，学联将于9月9日下午在牛顿市（Newton）的侨教中心举办迎新派对，欢迎大家前去参加。另外，波士顿台湾人生物科技协会的迎新活动也将在10月21日举办。◇</p>
 <p>责任编辑：冯文鸾</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044738.md#1">最新民调：川普领先德桑蒂斯37个百分点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045954.md#1">德桑蒂斯：若胜选 将阻止中共入侵台湾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052005.md#1">德桑蒂斯获南卡35名官员背书</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058400.md#1">民调：川普在爱荷华州领先德桑蒂斯23%</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/22/n13807428.md#1">波士顿侨务座谈 聚焦侨青传承</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/28/n13834734.md#1">台学联迎新派对 展望新学年</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14031927.md#1">波士顿台湾人生物科技年会 畅谈AI和基因技术</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/19/n14037903.md#1">纽英崙侨界筹办双十国庆 暨欢送孙俭元处长荣升</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/23/n9986897.md#1" target="_blank">莫斯科“悲伤墙”背后的故事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/31/n11625277.md#1" target="_blank">法轮功真相传入太平洋热带岛国瓦努阿图</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/10/31/n9789303.md#1" target="_blank">林辉：曾大红大紫的魏巍被批判与软禁的人生</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/8/5/11/n2112872.md#1" target="_blank">法轮功受难中重建中华价值观</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058703.md#1">二十四节气：秋天的第二个节气为何称“处暑”?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063213.md#1">【环球直击】挣钱难 大陆青年流行“反向消费”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063212.md#1">【晚间新闻】武大毕业生在美行凶被捕 一教师遇害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063423.md#1">【军事热点】乌军反攻 接触俄军脆弱内层防线</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061791.md#1">曾庆红家族企业花样年披露违约负债439亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061857.md#1">国务院部门发新提议 分析：与习想法相左</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061593.md#1">中国两个月近200万人染疫亡？分析：冰山一角</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061824.md#1">简廷芮9月补办婚礼 公开婚照一对儿女都入镜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062572.md#1">“为病重外婆冲喜” 林逸欣1年多前已结婚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056469.md#1">最简单的养肝秘方 随时随地一招就灵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060472.md#1">能量饮料让你提神？5副作用伤大脑 这类人要小心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061952.md#1">专家分享5个习惯 可显着改善大脑健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/29/n14063473.htm">哈佛台湾同学会迎新 现场社团火热招募</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063473.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
